--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <img src="x.webp" alt="X Logo" width="60">
   </a>
   <a href="https://youtube.com/The_Ankit_8" target="_blank">
-    <img src="youtube.webp" alt="X Logo" height ="80">
+    <img src="youtube.webp" alt="youtube Logo" height ="80">
   </a>
  </table>
 </body>
