--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <!-- <h1>hello world my name is ankit kuamr 8 </h1> -->
-     <h1>heading 1</h1>
-     <h2>heading 2</h2>
-     <h3>heading 3</h3>
-     <h4>heading 4</h4>
-     <p>paragraph</p>
-     <a href="https://google.com">google</a>
+ 
+     <h1>color property </h1>
+     
+     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem possimus est officia cum? Rem, beatae unde dolores voluptatem autem, quasi reprehenderit minus harum facilis nihil dolorum, repudiandae alias dicta sit. paragraph</p>
+
+
+
+
+     <!-- <a href="https://google.com">google</a>
      <br >
      <a href="hello.html">Document</a>
      <br >
-     <img src="https://tiimg.tistatic.com/fp/3/008/030/glossy-cover-rectangular-plain-paper-writing-spiral-binding-notebook-for-office-use-183.jpg"alt ="notebook" alt="notebook" height="100"/>
-
-</body>
+     <img src="https://tiimg.tistatic.com/fp/3/008/030/glossy-cover-rectangular-plain-paper-writing-spiral-binding-notebook-for-office-use-183.jpg"alt ="notebook" alt="notebook" height="100"/> -->
+     <iframe src="https://youtu.be/MzjYoA7d5DY">
+    </body>
 </html>
