--- a/project file/index.html
+++ b/project file/index.html
@@ -1,16 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+   <link rel="stylesheet" href=".//index.css">
+</head>
+<body>
+   
 <div align="center" >
-    <h3> Group project</h3>
+   <header>
+    <h3 style="color: aqua;"> Group project</h3>
+   </header>
+<main> 
  <table border="1" height = "180" width="250">
-    <thead>
-     <tr>
-        <th>group</th>
+    <thead style="color: aquamarine;">
+     <tr> 
+      <b>
+        <th>Group</th>
         <th>Name </th>
         <th colspan="1">Roll no</th>
+   
      </tr>
+     </b>
     </thead>
 
-    <tbody>
+    <tbody  style="background-color: blanchedalmond;" style="color: black;">
      <tr>
         <td rowspan="4">group 1</td>
         <td>Ankit kumar</td>
@@ -31,17 +46,20 @@
      </tr>
    </tbody>
  </table>
- <br>
- <hr>
+
+ 
+
 </div>
 
 <br>
+<hr>
+
 <br>
 <div>
-  <h3>Project Topic </h3>
+  <h3 style="background-color: bisque;" style="color: black;">Project Topic </h3>
   
- <ol>
-    <li>INTERNET</li>
+ <ol style="background-color: azure;">
+    <li><b>INTERNET</li></b>
      <ul height="100">
         
          <li>A computer network consiting of a worldwide network of computer that use the TCP/IP network
@@ -51,8 +69,8 @@
         
     </ul>
  </ol>
- <ol>
-    <LI>WEBSITE</LI>
+ <ol style="background-color: azure;">
+    <LI><b>WEBSITE</LI></b>
       <ul>
         <li> Web page is a document commonly written in html that is accessible through the intnet or other network using an internet browser. </li>
         <li>Static webpage are often HTML document stroed as files in the file system and made avliable by the web server over http.</li>
@@ -60,8 +78,8 @@
 
  </ol>
 
- <ol>
-    <li>DOMAIN NAME </LI>
+ <ol style="background-color: azure;">
+    <li><b>DOMAIN NAME </LI></b>
         <ul>
             <li>DNS SERVER:Also name as Name server ,Domain Name system server is a computer srever that contains a database of piblic IP adress and their associated hostnames.</li>
             <li>DNS server run speacial softtware and communicate with each other using speacial protocols.</li>
@@ -69,18 +87,27 @@
 
  </ol>
 </div>
-<head>
-<h3>Contact us </h3>
-</head>
+
+</main>
 
 <body>
- <table border="2">
+   
+</body>
 
+ 
+
+
+
+<footer>
+<h3>Contact us </h3>
   <a href="https://x.com/The_Ankit_8" target="_blank">
     <img src="x.webp" alt="X Logo" width="60">
   </a>
   <a href="https://youtube.com/The_Ankit_8" target="_blank">
     <img src="youtube.webp" alt="youtube Logo" height ="80">
   </a>
- </table>
+
+</footer>
+
 </body>
+</html>
